# OneBitRender

./: .clang-format  .gitignore  CMakeLists.txt
apps/: CMakeLists.txt  main.cpp
cmake/: FindSDL2.cmake  FindSDL2_image.cmake
include/OneBitRender/: constants.h  rasterizer.h  renderer.h  shading.h  vertex.h
src/: CMakeLists.txt  rasterizer.cpp  renderer.cpp
